services/ttrss.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ttrss
spec:
  selector:
    matchLabels:
      app: ttrss
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      name: ttrss
      labels:
        app: ttrss
    spec:
      hostname: ttrss
      containers:
      - name: ttrss
        image: angelnu/ttrss:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "100Mi"
            cpu: "50m"
          limits:
            #memory: "128Mi"
            #cpu: "500m"
        ports:
        - containerPort: 8080
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 120 # 2 minutes
          timeoutSeconds: 10
          failureThreshold: 6 # 1 minutes
---
# -------------------- Service ------------------- #

kind: Service
apiVersion: v1
metadata:
  labels:
    app: ttrss
  name: ttrss
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: ttrss
---

# ------------------- Ingress ------------------- #

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ttrss
  annotations:
    traefik.frontend.priority: "1"
spec:
  rules:
  - host: rss.angelnu.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ttrss
          servicePort: http
